syntax = "proto3";

package helloworld;

option java_multiple_files = true;
option java_package = "helloworld";
option java_outer_classname = "HelloWorldProto";

service HelloWorld {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

